{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 176,
  "lineage": "cb527c2f-cfa1-2b39-eb06-28efc2ccb23d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:internet-gateway/igw-04fc2f31c0fea1ce5",
            "id": "igw-04fc2f31c0fea1ce5",
            "owner_id": "755209495094",
            "tags": {
              "Name": "my-internet-gateway"
            },
            "tags_all": {
              "Name": "my-internet-gateway"
            },
            "vpc_id": "vpc-01decdd3d4b708deb"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:route-table/rtb-00baf0cd47f196c7a",
            "id": "rtb-00baf0cd47f196c7a",
            "owner_id": "755209495094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fc2f31c0fea1ce5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table"
            },
            "tags_all": {
              "Name": "my-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01decdd3d4b708deb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdcb7d0423eeeacb",
            "route_table_id": "rtb-00baf0cd47f196c7a",
            "subnet_id": "subnet-045a8b2abf92191ed"
          },
          "dependencies": [
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.my-route-table",
            "aws_subnet.subnets",
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a987e37477a140a",
            "route_table_id": "rtb-00baf0cd47f196c7a",
            "subnet_id": "subnet-0d2e31c8ea8131d79"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_internet_gateway.my-internet-gateway",
            "aws_route_table.my-route-table",
            "aws_subnet.subnets",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:security-group/sg-079d66a9c4e131933",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079d66a9c4e131933",
            "ingress": [],
            "name": "terraform-20220121131428616300000001",
            "name_prefix": "terraform-",
            "owner_id": "755209495094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01decdd3d4b708deb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:subnet/subnet-045a8b2abf92191ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-045a8b2abf92191ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755209495094",
            "tags": {
              "Name": "my-subnet-0"
            },
            "tags_all": {
              "Name": "my-subnet-0"
            },
            "vpc_id": "vpc-01decdd3d4b708deb"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:subnet/subnet-0d2e31c8ea8131d79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d2e31c8ea8131d79",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "755209495094",
            "tags": {
              "Name": "my-subnet-1"
            },
            "tags_all": {
              "Name": "my-subnet-1"
            },
            "vpc_id": "vpc-01decdd3d4b708deb"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:755209495094:vpc/vpc-01decdd3d4b708deb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7a2d2be7c629e70",
            "default_route_table_id": "rtb-0ec3ebb235a4d7a71",
            "default_security_group_id": "sg-08acc36bc7a69a3df",
            "dhcp_options_id": "dopt-02c6d478",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01decdd3d4b708deb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec3ebb235a4d7a71",
            "owner_id": "755209495094",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}